RESOLVED FIXED266662
Fix non-unified build using InlineCallFrameMalloc in InlineCallFrameSet
https://bugs.webkit.org/show_bug.cgi?id=266662
Summary Fix non-unified build using InlineCallFrameMalloc in InlineCallFrameSet
David Degazio
Reported 2023-12-19 14:54:03 PST
rdar://119894558 Among other changes in https://bugs.webkit.org/show_bug.cgi?id=266080, we added an extra type parameter to WTF::Bag so that bag nodes are allocated using the malloc of the type they contain. However, this change created a build failure when trying to perform a non-unified build, which was resolved by a partial revert in https://bugs.webkit.org/show_bug.cgi?id=266331. From what I can tell, the real cause of the bug which my change exposed is that InlineCallFrameSet.h never included InlineCallFrame.h, and now that we try and access a type alias from the body of InlineCallFrame, the missing definition of InlineCallFrame manifests as a compile error. But, when we perform a unified build, we currently include InlineCallFrame.h before including InlineCallFrameSet.h, so the definition is still available. It's desirable for us to respect the allocator of InlineCallFrame when allocating storage for them in an InlineCallFrameSet, so I think the easy fix to this is just to include InlineCallFrame.h. Not sure why we don't already do this, maybe at one point it was a cyclic dependency? It builds fine now and allows us to provide the malloc parameter without issue.
Attachments
David Degazio
Comment 1 2023-12-19 15:10:53 PST
EWS
Comment 2 2023-12-20 14:38:58 PST
Committed 272383@main (05aaf7c79b61): <https://commits.webkit.org/272383@main> Reviewed commits have been landed. Closing PR #22065 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.