Fix non-unified build using InlineCallFrameMalloc in InlineCallFrameSet https://bugs.webkit.org/show_bug.cgi?id=266662 rdar://119894558

Reviewed by Mark Lam.

Re-adds heap identifier definition to InlineCallFrame, and includes
InlineCallFrame.h in InlineCallFrameSet.h so we can use InlineCallFrameMalloc
in the frame set's WTF::Bag member. Also removes wtf/Bag.cpp since the
previous BagNode heap identifier is no longer declared or used.

* Source/JavaScriptCore/bytecode/InlineCallFrame.cpp:
* Source/JavaScriptCore/bytecode/InlineCallFrameSet.h:
* Source/WTF/WTF.xcodeproj/project.pbxproj:
* Source/WTF/wtf/Bag.cpp: Removed.
* Source/WTF/wtf/CMakeLists.txt:

Canonical link: https://commits.webkit.org/272383@main